--- a/manuscript/references.bib
+++ b/manuscript/references.bib
@@ -1,12 +1,22 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Tuomas Eerola at 2024-09-25 11:16:50 +0100 
+%% Created for Tuomas Eerola at 2024-09-25 13:43:52 +0100 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{balduzzi2019,
+	author = {Sara Balduzzi and Gerta R{\"u}cker and Guido Schwarzer},
+	date-added = {2024-09-25 13:43:41 +0100},
+	date-modified = {2024-09-25 13:43:41 +0100},
+	journal = {Evidence-Based Mental Health},
+	number = {22},
+	pages = {153--160},
+	title = {How to perform a meta-analysis with {R}: a practical tutorial},
+	year = {2019}}
 
 @article{zhang2023mo,
 	author = {Zhang, Meixian and Zhu, Yonghua and Zhang, Wenjun and Zhu, Yunwen and Feng, Tianyu},
