Start of results

--- a/manuscript/manuscript.qmd
+++ b/manuscript/manuscript.qmd
@@ -166,8 +166,7 @@ We first report regression studies that predict valence and arousal.
 
 See `analysis/analysis.qmd`
 
-Since there are many models contained within the studies, we will report the results in a two parts; We first give an overview of the results for all models, and then we focus on the best performing models of each study. The focus on best performing model is carried out by taking the model with the highest correlation coefficient and using this model for the study. This is done to avoid the issue of multiple models from the same study deflating the results as majority of the models included are relative modest baseline models and alternative techniques that do not represent the novelty and content of the article. Table 2 summarises the results for all models (All) as well as best performing models (Max) for each study. The summary includes the number of models and observations, the correlation coefficient and its 95% confidence interval, the t-value and p-value for the correlation, the heterogeneity statistics $\tau^2$ and $I^2$, calculated through appropriate transformations (Fisher's Z) for the correlation coefficient, and a random-effects model using `meta` library [@balduzzi2019].
-
+Since there are many models contained within each of the studies, we will report the results in two parts; We first give an overview of the results for all models, and then we focus on the best performing models of each study. The best performing model is the model within each study with the highest correlation coefficient. This reduction is done to avoid the issue of multiple models from the same study deflating the results as majority of the models included are relative modest baseline or alternative models that do not represent the novelty or content of the article. Table 2 summarises the results for all models (All) as well as best performing models (Max) for each study. The summary includes the number of models and observations, the correlation coefficient and its 95% confidence interval, the t-value and p-value for the correlation, the heterogeneity statistics $\tau^2$ and $I^2$, calculated through appropriate transformations (Fisher's Z) for the correlation coefficient as part of a random-effects model using `meta` library [@balduzzi2019].
 
 Table 2. Meta-analytic diagnostic for all regression studies predicting valence from audio.
 
